--- a/Tuts & Projects/RefLib/paint.css
+++ b/Tuts & Projects/RefLib/paint.css
@@ -7,6 +7,9 @@ main {
 	margin: 0;
 	padding: 0;
 }
+body {
+	background: #FFF;
+}
 /*TYPOGRAPHY*/
 h1,
 h2,
@@ -21,14 +24,47 @@ li {
 	padding: 0;
 	font-family: "Lato";
 	font-weight: lighter;
+	text-align: center;
 }
 header {
-	background: #1B676B;
-	color: #eafde6;
+	
+	color: #FFF;
 	
 	letter-spacing: 0.15em;
 }
-div > h1 {
-	text-transform: uppercase;
-	font-size: 40px;
+header span {
+	color: #000;
 }
+div > h1 {
+	background: #114042;
+	text-transform: uppercase;
+	font-size: 80px;
+
+}
+div > h2 {
+	background: #1b676b;
+	color: #fff;
+	text-transform: uppercase;
+}
+header ul {
+	background: #88c425;
+	color: #fff;
+	list-style-type: none;
+	text-align: center;
+	height: 10%;
+
+}
+header ul li {
+	display: inline-block;
+}
+header ul li a {
+	text-decoration: none;
+	font-size: 18px;
+	color: #fff;
+}
+ul {
+	
+}
+
+
+fieldset
